--- a/index.ipynb
+++ b/index.ipynb
@@ -426,7 +426,7 @@
    "outputs": [],
    "source": [
     "# find all records between ages 1 and three here\n",
-    "cursor.execute('''SELECT name FROM cats WHERE age DESC LIMIT 1;''').fetchone()"
+    "cursor.execute('''SELECT name FROM cats WHERE age BETWEEN 1 and 3;''').fetchone()"
    ]
   },
   {
