--- a/index.ipynb
+++ b/index.ipynb
@@ -421,12 +421,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Maru',)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# find all records between ages 1 and three here\n",
-    "cursor.execute('''SELECT name FROM cats WHERE age BETWEEN 1 and 3;''').fetchone()"
+    "cursor.execute('''SELECT name FROM cats WHERE age BETWEEN 1 AND 3;''').fetchone()"
    ]
   },
   {
