automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -342,22 +342,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(4, 'Moe', 10, 'Tabby', None)]"
+       "(4, 'Moe', 10, 'Tabby', None)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cursor.execute('''SELECT * FROM cats ORDER BY age DESC LIMIT 1;''').fetchall()\n",
+    "cursor.execute('''SELECT * FROM cats ORDER BY age DESC LIMIT 1;''').fetchone()\n",
     "# OR\n",
     "# cursor.execute('''SELECT * FROM cats ORDER BY age DESC;''').fetchone() # returns the same element as the above"
    ]
@@ -421,23 +421,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('Maru',)"
+       "[('Maru',), ('Hana',), ('Patches',)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# find all records between ages 1 and three here\n",
-    "cursor.execute('''SELECT name FROM cats WHERE age BETWEEN 1 AND 3;''').fetchone()"
+    "cursor.execute('''SELECT name FROM cats WHERE age BETWEEN 1 AND 3;''').fetchall()"
    ]
   },
   {
