--- a/index.ipynb
+++ b/index.ipynb
@@ -473,7 +473,8 @@
    "outputs": [],
    "source": [
     "# insert new record here\n",
-    "# retrieve all records from the cat table here"
+    "# retrieve all records from the cat table here\n",
+    "cursoe."
    ]
   },
   {
