automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -474,7 +474,8 @@
    "source": [
     "# insert new record here\n",
     "# retrieve all records from the cat table here\n",
-    "cursoe."
+    "cursor.execute(\"INSERT INTO cats (name, age, breed) VALUES (NULL, NULL, \"Tabby\");\n",
+    "\")"
    ]
   },
   {
