--- a/index.ipynb
+++ b/index.ipynb
@@ -468,9 +468,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-13-edc2f3f2d024>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-edc2f3f2d024>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    cursor.execute(\"INSERT INTO cats (name, age, breed) VALUES (NULL, NULL, \"Tabby\");\u001b[0m\n\u001b[0m                                                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# insert new record here\n",
     "# retrieve all records from the cat table here\n",
