--- a/index.ipynb
+++ b/index.ipynb
@@ -468,23 +468,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-14-7fe412cc277a>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-7fe412cc277a>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    cursor.execute(\"INSERT INTO cats (name, age, breed) VALUES (NULL, NULL, 'Tabby');\u001b[0m\n\u001b[0m                                                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f0c4c750340>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# insert new record here\n",
     "# retrieve all records from the cat table here\n",
-    "cursor.execute(\"INSERT INTO cats (name, age, breed) VALUES (NULL, NULL, 'Tabby');\n",
-    "\")"
+    "cursor.execute(\"INSERT INTO cats (name, age, breed) VALUES (NULL, NULL, 'Tabby');\")"
    ]
   },
   {
