--- a/index.ipynb
+++ b/index.ipynb
@@ -491,7 +491,9 @@
   {
    "cell_type": "raw",
    "metadata": {},
-   "source": []
+   "source": [
+    "cursor.exe"
+   ]
   },
   {
    "cell_type": "markdown",
