--- a/index.ipynb
+++ b/index.ipynb
@@ -490,11 +490,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f0c4c750340>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cursor.execute(\"SELECT * FROM \")"
+    "cursor.execute(\"SELECT * FROM cats;\").fetchall()"
    ]
   },
   {
