--- a/index.ipynb
+++ b/index.ipynb
@@ -490,16 +490,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f0c4c750340>"
+       "[(1, 'Maru', 3, 'Scottish Fold', 1),\n",
+       " (2, 'Hana', 1, 'Tabby', 1),\n",
+       " (3, \"Lil' Bub\", 5, 'American Shorthair', None),\n",
+       " (4, 'Moe', 10, 'Tabby', None),\n",
+       " (5, 'Patches', 2, 'Calico', None),\n",
+       " (6, None, None, 'Tabby', None)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
