automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -541,6 +541,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cursor.execute('''SELECT * FROM cats ORDER BY age DESC LIMIT 1;''').fetchone()\n",
     "# select cats where the name field is null here"
    ]
   },
