automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -541,7 +541,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cursor.execute('''SELECT * FROM cats WHERE name IS  BY age DESC LIMIT 1;''').fetchone()\n",
+    "cursor.execute(''SELECT * FROM cats WHERE name IS NULL;').fetchone()\n",
     "# select cats where the name field is null here"
    ]
   },
