--- a/index.ipynb
+++ b/index.ipynb
@@ -537,11 +537,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(6, None, None, 'Tabby', None)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cursor.execute(''SELECT * FROM cats WHERE name IS NULL;').fetchone()\n",
+    "cursor.execute('SELECT * FROM cats WHERE name IS NULL;').fetchon()\n",
     "# select cats where the name field is null here"
    ]
   },
