automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -537,22 +537,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(6, None, None, 'Tabby', None)]"
+       "(6, None, None, 'Tabby', None)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cursor.execute('SELECT * FROM cats WHERE name IS NULL;').fetchon()\n",
+    "cursor.execute('SELECT * FROM cats WHERE name IS NULL;').fetchone()\n",
     "# select cats where the name field is null here"
    ]
   },
