automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -595,7 +595,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cursor.execute('''SELECT * FROM cats ORDER BY age DESC LIMIT 1;''').fetchall()# retrieve the count of cats whose owner id = 1 here"
+    "cursor.exectur"
    ]
   },
   {
