automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -595,7 +595,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cursor.execute(\"SELECT COUNT(owner)\")"
+    "cursor.execute(\"SELECT COUNT(owner_id) FROM cats WHERE owner\")"
    ]
   },
   {
