--- a/index.ipynb
+++ b/index.ipynb
@@ -591,11 +591,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f0c4c750340>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cursor.execute(\"SELECT COUNT(owner_id) FROM cats WHERE owner\")"
+    "cursor.execute(\"SELECT COUNT(owner_id) FROM cats WHERE owner_id = 1;\").fech"
    ]
   },
   {
