automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -591,22 +591,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f0c4c750340>"
+       "[(2,)]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cursor.execute(\"SELECT COUNT(owner_id) FROM cats WHERE owner_id = 1;\").fech"
+    "cursor.execute(\"SELECT COUNT(owner_id) FROM cats WHERE owner_id = 1;\").fetchall()"
    ]
   },
   {
