--- a/index.ipynb
+++ b/index.ipynb
@@ -658,7 +658,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# execute GROUP BY sql statement here"
+    "# execute GROUP BY sql statement here\n"
    ]
   },
   {
