automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -658,7 +658,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# execute GROUP BY sql statement here\n"
+    "# execute GROUP BY sql statement here\n",
+    "cursor.execute()"
    ]
   },
   {
