automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -659,7 +659,7 @@
    "outputs": [],
    "source": [
     "# execute GROUP BY sql statement here\n",
-    "cursor.execute(\"SELECT bree, c\")"
+    "cursor.execute(\"SELECT bree, COUNT(breed) \")"
    ]
   },
   {
