--- a/index.ipynb
+++ b/index.ipynb
@@ -659,7 +659,7 @@
    "outputs": [],
    "source": [
     "# execute GROUP BY sql statement here\n",
-    "cursor.execute(\"SELECT breed, COUNT(breed) FROM cats GROUP BY \")"
+    "cursor.execute(\"SELECT breed, COUNT(breed) FROM cats GROUP BY breed;\").fetcha"
    ]
   },
   {
