--- a/index.ipynb
+++ b/index.ipynb
@@ -654,12 +654,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('American Shorthair', 1), ('Calico', 1), ('Scottish Fold', 1), ('Tabby', 3)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# execute GROUP BY sql statement here\n",
-    "cursor.execute(\"SELECT breed, COUNT(breed) FROM cats GROUP BY breed;\").fetcha"
+    "cursor.execute(\"SELECT breed, COUNT(breed) FROM cats GROUP BY breed;\").fetchall()\n"
    ]
   },
   {
