automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -699,7 +699,8 @@
    },
    "outputs": [],
    "source": [
-    "# execute multiple column group by statement here"
+    "# execute multiple column group by statement here\n",
+    "s"
    ]
   },
   {
