--- a/index.ipynb
+++ b/index.ipynb
@@ -700,7 +700,7 @@
    "outputs": [],
    "source": [
     "# execute multiple column group by statement here\n",
-    "s"
+    "cursor.execute(\"SE\")"
    ]
   },
   {
