--- a/index.ipynb
+++ b/index.ipynb
@@ -700,7 +700,7 @@
    "outputs": [],
    "source": [
     "# execute multiple column group by statement here\n",
-    "cursor.execute(\"SELECT breed, owner_id, COUNT(breed) FROM cats GROUP BY breed, \")"
+    "cursor.execute(\"SELECT breed, owner_id, COUNT(breed) FROM cats GROUP BY breed, owner_id\")"
    ]
   },
   {
